parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> bloc
Rule 2     bloc -> bloc statement SEMICOLON
Rule 3     bloc -> statement SEMICOLON
Rule 4     statement -> PRINT LPAREN multiExpr RPAREN
Rule 5     statement -> NAME AFFECT expression
Rule 6     statement -> IF LPAREN expression RPAREN LACCOLADE bloc RACCOLADE
Rule 7     statement -> IF LPAREN expression RPAREN LACCOLADE bloc RACCOLADE ELSE LACCOLADE bloc RACCOLADE
Rule 8     statement -> WHILE LPAREN expression RPAREN LACCOLADE bloc RACCOLADE
Rule 9     statement -> FOR LPAREN statement SEMICOLON expression SEMICOLON statement RPAREN LACCOLADE bloc RACCOLADE
Rule 10    multiname -> NAME VIRG multiname
Rule 11    multiname -> NAME
Rule 12    multiExpr -> expression VIRG multiExpr
Rule 13    multiExpr -> expression
Rule 14    statement -> FUNCTION NAME LPAREN RPAREN LACCOLADE bloc RACCOLADE
Rule 15    statement -> FUNCTION NAME LPAREN multiname RPAREN LACCOLADE bloc RACCOLADE
Rule 16    statement -> NAME LPAREN RPAREN
Rule 17    statement -> NAME LPAREN multiExpr RPAREN
Rule 18    expression -> expression PLUS expression
Rule 19    expression -> expression TIMES expression
Rule 20    expression -> expression MINUS expression
Rule 21    expression -> expression DIVIDE expression
Rule 22    expression -> expression AND expression
Rule 23    expression -> expression OR expression
Rule 24    expression -> expression INF expression
Rule 25    expression -> expression SUP expression
Rule 26    expression -> NAME PLUSPLUS
Rule 27    expression -> NAME PLUSAFFECT expression
Rule 28    expression -> NAME MINUSMINUS
Rule 29    expression -> NAME MINUSAFFECT expression
Rule 30    expression -> expression EQUALS expression
Rule 31    expression -> LPAREN expression RPAREN
Rule 32    expression -> NUMBER
Rule 33    expression -> NAME
Rule 34    expression -> GUILLEMET NAME GUILLEMET
Rule 35    expression -> TRUE
Rule 36    expression -> FALSE

Terminals, with rules where they appear

AFFECT               : 5
AND                  : 22
DIVIDE               : 21
ELSE                 : 7
EQUALS               : 30
FALSE                : 36
FOR                  : 9
FUNCTION             : 14 15
GUILLEMET            : 34 34
IF                   : 6 7
INF                  : 24
LACCOLADE            : 6 7 7 8 9 14 15
LPAREN               : 4 6 7 8 9 14 15 16 17 31
MINUS                : 20
MINUSAFFECT          : 29
MINUSMINUS           : 28
NAME                 : 5 10 11 14 15 16 17 26 27 28 29 33 34
NUMBER               : 32
OR                   : 23
PLUS                 : 18
PLUSAFFECT           : 27
PLUSPLUS             : 26
PRINT                : 4
RACCOLADE            : 6 7 7 8 9 14 15
RPAREN               : 4 6 7 8 9 14 15 16 17 31
SEMICOLON            : 2 3 9 9
SUP                  : 25
TIMES                : 19
TRUE                 : 35
VIRG                 : 10 12
WHILE                : 8
error                : 

Nonterminals, with rules where they appear

bloc                 : 1 2 6 7 7 8 9 14 15
expression           : 5 6 7 8 9 12 13 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 27 29 30 30 31
multiExpr            : 4 12 17
multiname            : 10 15
start                : 0
statement            : 2 3 9 9

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . bloc
    (2) bloc -> . bloc statement SEMICOLON
    (3) bloc -> . statement SEMICOLON
    (4) statement -> . PRINT LPAREN multiExpr RPAREN
    (5) statement -> . NAME AFFECT expression
    (6) statement -> . IF LPAREN expression RPAREN LACCOLADE bloc RACCOLADE
    (7) statement -> . IF LPAREN expression RPAREN LACCOLADE bloc RACCOLADE ELSE LACCOLADE bloc RACCOLADE
    (8) statement -> . WHILE LPAREN expression RPAREN LACCOLADE bloc RACCOLADE
    (9) statement -> . FOR LPAREN statement SEMICOLON expression SEMICOLON statement RPAREN LACCOLADE bloc RACCOLADE
    (14) statement -> . FUNCTION NAME LPAREN RPAREN LACCOLADE bloc RACCOLADE
    (15) statement -> . FUNCTION NAME LPAREN multiname RPAREN LACCOLADE bloc RACCOLADE
    (16) statement -> . NAME LPAREN RPAREN
    (17) statement -> . NAME LPAREN multiExpr RPAREN

    PRINT           shift and go to state 4
    NAME            shift and go to state 5
    IF              shift and go to state 6
    WHILE           shift and go to state 7
    FOR             shift and go to state 8
    FUNCTION        shift and go to state 9

    start                          shift and go to state 1
    bloc                           shift and go to state 2
    statement                      shift and go to state 3

state 1

    (0) S' -> start .



state 2

    (1) start -> bloc .
    (2) bloc -> bloc . statement SEMICOLON
    (4) statement -> . PRINT LPAREN multiExpr RPAREN
    (5) statement -> . NAME AFFECT expression
    (6) statement -> . IF LPAREN expression RPAREN LACCOLADE bloc RACCOLADE
    (7) statement -> . IF LPAREN expression RPAREN LACCOLADE bloc RACCOLADE ELSE LACCOLADE bloc RACCOLADE
    (8) statement -> . WHILE LPAREN expression RPAREN LACCOLADE bloc RACCOLADE
    (9) statement -> . FOR LPAREN statement SEMICOLON expression SEMICOLON statement RPAREN LACCOLADE bloc RACCOLADE
    (14) statement -> . FUNCTION NAME LPAREN RPAREN LACCOLADE bloc RACCOLADE
    (15) statement -> . FUNCTION NAME LPAREN multiname RPAREN LACCOLADE bloc RACCOLADE
    (16) statement -> . NAME LPAREN RPAREN
    (17) statement -> . NAME LPAREN multiExpr RPAREN

    $end            reduce using rule 1 (start -> bloc .)
    PRINT           shift and go to state 4
    NAME            shift and go to state 5
    IF              shift and go to state 6
    WHILE           shift and go to state 7
    FOR             shift and go to state 8
    FUNCTION        shift and go to state 9

    statement                      shift and go to state 10

state 3

    (3) bloc -> statement . SEMICOLON

    SEMICOLON       shift and go to state 11


state 4

    (4) statement -> PRINT . LPAREN multiExpr RPAREN

    LPAREN          shift and go to state 12


state 5

    (5) statement -> NAME . AFFECT expression
    (16) statement -> NAME . LPAREN RPAREN
    (17) statement -> NAME . LPAREN multiExpr RPAREN

    AFFECT          shift and go to state 13
    LPAREN          shift and go to state 14


state 6

    (6) statement -> IF . LPAREN expression RPAREN LACCOLADE bloc RACCOLADE
    (7) statement -> IF . LPAREN expression RPAREN LACCOLADE bloc RACCOLADE ELSE LACCOLADE bloc RACCOLADE

    LPAREN          shift and go to state 15


state 7

    (8) statement -> WHILE . LPAREN expression RPAREN LACCOLADE bloc RACCOLADE

    LPAREN          shift and go to state 16


state 8

    (9) statement -> FOR . LPAREN statement SEMICOLON expression SEMICOLON statement RPAREN LACCOLADE bloc RACCOLADE

    LPAREN          shift and go to state 17


state 9

    (14) statement -> FUNCTION . NAME LPAREN RPAREN LACCOLADE bloc RACCOLADE
    (15) statement -> FUNCTION . NAME LPAREN multiname RPAREN LACCOLADE bloc RACCOLADE

    NAME            shift and go to state 18


state 10

    (2) bloc -> bloc statement . SEMICOLON

    SEMICOLON       shift and go to state 19


state 11

    (3) bloc -> statement SEMICOLON .

    PRINT           reduce using rule 3 (bloc -> statement SEMICOLON .)
    NAME            reduce using rule 3 (bloc -> statement SEMICOLON .)
    IF              reduce using rule 3 (bloc -> statement SEMICOLON .)
    WHILE           reduce using rule 3 (bloc -> statement SEMICOLON .)
    FOR             reduce using rule 3 (bloc -> statement SEMICOLON .)
    FUNCTION        reduce using rule 3 (bloc -> statement SEMICOLON .)
    $end            reduce using rule 3 (bloc -> statement SEMICOLON .)
    RACCOLADE       reduce using rule 3 (bloc -> statement SEMICOLON .)


state 12

    (4) statement -> PRINT LPAREN . multiExpr RPAREN
    (12) multiExpr -> . expression VIRG multiExpr
    (13) multiExpr -> . expression
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression TIMES expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression INF expression
    (25) expression -> . expression SUP expression
    (26) expression -> . NAME PLUSPLUS
    (27) expression -> . NAME PLUSAFFECT expression
    (28) expression -> . NAME MINUSMINUS
    (29) expression -> . NAME MINUSAFFECT expression
    (30) expression -> . expression EQUALS expression
    (31) expression -> . LPAREN expression RPAREN
    (32) expression -> . NUMBER
    (33) expression -> . NAME
    (34) expression -> . GUILLEMET NAME GUILLEMET
    (35) expression -> . TRUE
    (36) expression -> . FALSE

    NAME            shift and go to state 23
    LPAREN          shift and go to state 20
    NUMBER          shift and go to state 24
    GUILLEMET       shift and go to state 25
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27

    multiExpr                      shift and go to state 21
    expression                     shift and go to state 22

state 13

    (5) statement -> NAME AFFECT . expression
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression TIMES expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression INF expression
    (25) expression -> . expression SUP expression
    (26) expression -> . NAME PLUSPLUS
    (27) expression -> . NAME PLUSAFFECT expression
    (28) expression -> . NAME MINUSMINUS
    (29) expression -> . NAME MINUSAFFECT expression
    (30) expression -> . expression EQUALS expression
    (31) expression -> . LPAREN expression RPAREN
    (32) expression -> . NUMBER
    (33) expression -> . NAME
    (34) expression -> . GUILLEMET NAME GUILLEMET
    (35) expression -> . TRUE
    (36) expression -> . FALSE

    NAME            shift and go to state 23
    LPAREN          shift and go to state 20
    NUMBER          shift and go to state 24
    GUILLEMET       shift and go to state 25
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27

    expression                     shift and go to state 28

state 14

    (16) statement -> NAME LPAREN . RPAREN
    (17) statement -> NAME LPAREN . multiExpr RPAREN
    (12) multiExpr -> . expression VIRG multiExpr
    (13) multiExpr -> . expression
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression TIMES expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression INF expression
    (25) expression -> . expression SUP expression
    (26) expression -> . NAME PLUSPLUS
    (27) expression -> . NAME PLUSAFFECT expression
    (28) expression -> . NAME MINUSMINUS
    (29) expression -> . NAME MINUSAFFECT expression
    (30) expression -> . expression EQUALS expression
    (31) expression -> . LPAREN expression RPAREN
    (32) expression -> . NUMBER
    (33) expression -> . NAME
    (34) expression -> . GUILLEMET NAME GUILLEMET
    (35) expression -> . TRUE
    (36) expression -> . FALSE

    RPAREN          shift and go to state 29
    NAME            shift and go to state 23
    LPAREN          shift and go to state 20
    NUMBER          shift and go to state 24
    GUILLEMET       shift and go to state 25
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27

    multiExpr                      shift and go to state 30
    expression                     shift and go to state 22

state 15

    (6) statement -> IF LPAREN . expression RPAREN LACCOLADE bloc RACCOLADE
    (7) statement -> IF LPAREN . expression RPAREN LACCOLADE bloc RACCOLADE ELSE LACCOLADE bloc RACCOLADE
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression TIMES expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression INF expression
    (25) expression -> . expression SUP expression
    (26) expression -> . NAME PLUSPLUS
    (27) expression -> . NAME PLUSAFFECT expression
    (28) expression -> . NAME MINUSMINUS
    (29) expression -> . NAME MINUSAFFECT expression
    (30) expression -> . expression EQUALS expression
    (31) expression -> . LPAREN expression RPAREN
    (32) expression -> . NUMBER
    (33) expression -> . NAME
    (34) expression -> . GUILLEMET NAME GUILLEMET
    (35) expression -> . TRUE
    (36) expression -> . FALSE

    NAME            shift and go to state 23
    LPAREN          shift and go to state 20
    NUMBER          shift and go to state 24
    GUILLEMET       shift and go to state 25
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27

    expression                     shift and go to state 31

state 16

    (8) statement -> WHILE LPAREN . expression RPAREN LACCOLADE bloc RACCOLADE
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression TIMES expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression INF expression
    (25) expression -> . expression SUP expression
    (26) expression -> . NAME PLUSPLUS
    (27) expression -> . NAME PLUSAFFECT expression
    (28) expression -> . NAME MINUSMINUS
    (29) expression -> . NAME MINUSAFFECT expression
    (30) expression -> . expression EQUALS expression
    (31) expression -> . LPAREN expression RPAREN
    (32) expression -> . NUMBER
    (33) expression -> . NAME
    (34) expression -> . GUILLEMET NAME GUILLEMET
    (35) expression -> . TRUE
    (36) expression -> . FALSE

    NAME            shift and go to state 23
    LPAREN          shift and go to state 20
    NUMBER          shift and go to state 24
    GUILLEMET       shift and go to state 25
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27

    expression                     shift and go to state 32

state 17

    (9) statement -> FOR LPAREN . statement SEMICOLON expression SEMICOLON statement RPAREN LACCOLADE bloc RACCOLADE
    (4) statement -> . PRINT LPAREN multiExpr RPAREN
    (5) statement -> . NAME AFFECT expression
    (6) statement -> . IF LPAREN expression RPAREN LACCOLADE bloc RACCOLADE
    (7) statement -> . IF LPAREN expression RPAREN LACCOLADE bloc RACCOLADE ELSE LACCOLADE bloc RACCOLADE
    (8) statement -> . WHILE LPAREN expression RPAREN LACCOLADE bloc RACCOLADE
    (9) statement -> . FOR LPAREN statement SEMICOLON expression SEMICOLON statement RPAREN LACCOLADE bloc RACCOLADE
    (14) statement -> . FUNCTION NAME LPAREN RPAREN LACCOLADE bloc RACCOLADE
    (15) statement -> . FUNCTION NAME LPAREN multiname RPAREN LACCOLADE bloc RACCOLADE
    (16) statement -> . NAME LPAREN RPAREN
    (17) statement -> . NAME LPAREN multiExpr RPAREN

    PRINT           shift and go to state 4
    NAME            shift and go to state 5
    IF              shift and go to state 6
    WHILE           shift and go to state 7
    FOR             shift and go to state 8
    FUNCTION        shift and go to state 9

    statement                      shift and go to state 33

state 18

    (14) statement -> FUNCTION NAME . LPAREN RPAREN LACCOLADE bloc RACCOLADE
    (15) statement -> FUNCTION NAME . LPAREN multiname RPAREN LACCOLADE bloc RACCOLADE

    LPAREN          shift and go to state 34


state 19

    (2) bloc -> bloc statement SEMICOLON .

    PRINT           reduce using rule 2 (bloc -> bloc statement SEMICOLON .)
    NAME            reduce using rule 2 (bloc -> bloc statement SEMICOLON .)
    IF              reduce using rule 2 (bloc -> bloc statement SEMICOLON .)
    WHILE           reduce using rule 2 (bloc -> bloc statement SEMICOLON .)
    FOR             reduce using rule 2 (bloc -> bloc statement SEMICOLON .)
    FUNCTION        reduce using rule 2 (bloc -> bloc statement SEMICOLON .)
    $end            reduce using rule 2 (bloc -> bloc statement SEMICOLON .)
    RACCOLADE       reduce using rule 2 (bloc -> bloc statement SEMICOLON .)


state 20

    (31) expression -> LPAREN . expression RPAREN
    (18) expression -> . expression PLUS expression
    (19) expression -> . expression TIMES expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression AND expression
    (23) expression -> . expression OR expression
    (24) expression -> . expression INF expression
    (25) expression -> . expression SUP expression
    (26) expression -> . NAME PLUSPLUS
    (27) expression -> . NAME PLUSAFFECT expression
    (28) expression -> . NAME MINUSMINUS
    (29) expression -> . NAME MINUSAFFECT expression
    (30) expression -> . expression EQUALS expression
    (31) expression -> . LPAREN expression RPAREN
    (32) expression -> . NUMBER
    (33) expression -> . NAME
    (34) expression -> . GUILLEMET NAME GUILLEMET
    (35) expression -> . TRUE
    (36) expression -> . FALSE

    NAME            shift and go to state 23
    LPAREN          shift and go to state 20
    NUMBER          shift and go to state 24
    GUILLEMET       shift and go to state 25
    TRUE            shift and go to state 26
    FALSE           shift and go to state 27

    expression                     shift and go to state 35

state 21

    (4) statement -> PRINT LPAREN multiExpr . RPAREN

    RPAREN          shift and go to state 36


state 22

    (12) multiExpr -> expression . VIRG multiExpr
    (13) multiExpr -> expression .
    (18) expression -> expression . PLUS expression
    (19) expression -> expression . TIMES expression
    (20) expression -> expression . MINUS expression
    (21) expression -> expression . DIVIDE expression
    (22) expression -> expression . AND expression
    (23) expression -> expression . OR expression
    (24) expression -> expression . INF expression
    (25) expression -> expression . SUP expression
    (30) expression -> expression . EQUALS expression

    VIRG            shift and go to state 37
    RPAREN          reduce using rule 13 (multiExpr -> expression .)
    PLUS            shift and go to state 38
    TIMES           shift and go to state 39
    MINUS           shift and go to state 40
    DIVIDE          shift and go to state 41
    AND             shift and go to state 42
    OR              shift and go to state 43
    INF             shift and go to state 44
    SUP             shift and go to state 45
    EQUALS          shift and go to state 46


state 23

    (26) expression -> NAME . PLUSPLUS
    (27) expression -> NAME . PLUSAFFECT expression
    (28) expression -> NAME . MINUSMINUS
    (29) expression -> NAME . MINUSAFFECT expression
    (33) expression -> NAME .

    PLUSPLUS        shift and go to state 47
    PLUSAFFECT      shift and go to state 48
    MINUSMINUS      shift and go to state 49
    MINUSAFFECT     shift and go to state 50
    VIRG            reduce using rule 33 (expression -> NAME .)
    PLUS            reduce using rule 33 (expression -> NAME .)
    TIMES           reduce using rule 33 (expression -> NAME .)
    MINUS           reduce using rule 33 (expression -> NAME .)
    DIVIDE          reduce using rule 33 (expression -> NAME .)
    AND             reduce using rule 33 (expression -> NAME .)
    OR              reduce using rule 33 (expression -> NAME .)
    INF             reduce using rule 33 (expression -> NAME .)
    SUP             reduce using rule 33 (expression -> NAME .)
    EQUALS          reduce using rule 33 (expression -> NAME .)
    RPAREN          reduce using rule 33 (expression -> NAME .)
    SEMICOLON       reduce using rule 33 (expression -> NAME .)


state 24

    (32) expression -> NUMBER .

    VIRG            reduce using rule 32 (expression -> NUMBER .)
    PLUS            reduce using rule 32 (expression -> NUMBER .)
    TIMES           reduce using rule 32 (expression -> NUMBER .)
    MINUS           reduce using rule 32 (expression -> NUMBER .)
    DIVIDE          reduce using rule 32 (expression -> NUMBER .)
    AND             reduce using rule 32 (expression -> NUMBER .)
    OR              reduce using rule 32 (expression -> NUMBER .)
    INF             reduce using rule 32 (expression -> NUMBER .)
    SUP             reduce using rule 32 (expression -> NUMBER .)
    EQUALS          reduce using rule 32 (expression -> NUMBER .)
    RPAREN          reduce using rule 32 (expression -> NUMBER .)
    SEMICOLON       reduce using rule 32 (expression -> NUMBER .)


state 25

    (34) expression -> GUILLEMET . NAME GUILLEMET

    NAME            shift and go to state 51


state 26

    (35) expression -> TRUE .

    VIRG            reduce using rule 35 (expression -> TRUE .)
    PLUS            reduce using rule 35 (expression -> TRUE .)
    TIMES           reduce using rule 35 (expression -> TRUE .)
    MINUS           reduce using rule 35 (expression -> TRUE .)
    DIVIDE          reduce using rule 35 (expression -> TRUE .)
    AND             reduce using rule 35 (expression -> TRUE .)
    OR              reduce using rule 35 (expression -> TRUE .)
    INF             reduce using rule 35 (expression -> TRUE .)
    SUP             reduce using rule 35 (expression -> TRUE .)
    EQUALS          reduce using rule 35 (expression -> TRUE .)
    RPAREN          reduce using rule 35 (expression -> TRUE .)
    SEMICOLON       reduce using rule 35 (expression -> TRUE .)


state 27

    (36) expression -> FALSE .

    VIRG            reduce using rule 36 (expression -> FALSE .)
    PLUS            reduce using rule 36 (expression -> FALSE .)
    TIMES           reduce using rule 36 (expression -> FALSE .)
    MINUS           reduce using rule 36 (expression -> FALSE .)
    DIVIDE          reduce using rule 36 (expression -> FALSE .)
    AND             reduce using rule 36 (expression -> FALSE .)
    OR              reduce using rule 36 (expression -> FALSE .)
    INF             reduce using rule 36 (expression -> FALSE .)
    SUP             reduce using rule 36 (expression -> FALSE .)
    EQUALS          reduce using rule 36 (expression -> FALSE .)
    RPAREN          reduce using rule 36 (expression -> FALSE .)
    SEMICOLON       reduce using rule 36 (expression -> FALSE .)


state 28

    (5) statement -> NAME AFFECT expression .
    (18) expression -> expression . PLUS expression
    (19) expression -> expression . TIMES expression
    (20) expression -> expression . MINUS expression
    (21) expression -> expression . DIVIDE expression
    (22) expression -> expression . AND expression
    (23) expression -> expression . OR expression
    (24) expression -> expression . INF expression
    (25) expression -> expression . SUP expression
    (30) expression -> expression . EQUALS expression

    SEMICOLON       reduce using rule 5 (statement -> NAME AFFECT expression .)
    RPAREN          reduce using rule 5 (statement -> NAME AFFECT expression .)
    PLUS            shift and go to state 38
    TIMES           shift and go to state 39
    MINUS           shift and go to state 40
    DIVIDE          shift and go to state 41
    AND             shift and go to state 42
    OR              shift and go to state 43
    INF             shift and go to state 44
    SUP             shift and go to state 45
    EQUALS          shift and go to state 46


state 29

    (16) statement -> NAME LPAREN RPAREN .

    SEMICOLON       reduce using rule 16 (statement -> NAME LPAREN RPAREN .)
    RPAREN          reduce using rule 16 (statement -> NAME LPAREN RPAREN .)


state 30

    (17) statement -> NAME LPAREN multiExpr . RPAREN

    RPAREN          shift and go to state 52


state 31

    (6) statement -> IF LPAREN expression . RPAREN LACCOLADE bloc RACCOLADE
    (7) statement -> IF LPAREN expression . RPAREN LACCOLADE bloc RACCOLADE ELSE LACCOLADE bloc RACCOLADE
    (18) expression -> expression . PLUS expression
    (19) expression -> expression . TIMES expression
    (20) expression -> expression . MINUS expression
    (21) expression -> expression . DIVIDE expression
    (22) expression -> expression . AND expression
    (23) expression -> expression . OR expression
    (24) expression -> expression . INF expression
    (25) expression -> expression . SUP expression
    (30) expression -> expression . EQUALS expression

    RPAREN          shift and go to state 53
    PLUS            shift and go to state 38
    TIMES           shift and go to state 39
    MINUS           shift and go to state 40
    DIVIDE          shift and go to state 41
    AND             shift and go to state 42
    OR              shift and go to state 43
    INF             shift and go to state 44
    SUP             shift and go to state 45
    EQUALS          shift and go to state 46


state 32

    (8) statement -> WHILE LPAREN expression . RPAREN LACCOLADE bloc RACCOLADE
    (18) expression -> expression . PLUS expression
    (19) expression -> expression . TIMES expression
    (20) expression -> expression . MINUS expression
    (21) expression -> expression . DIVIDE expression
    (22) expression -> expression . AND expression
    (23) expression -> expression . OR expression
    (24) expression -> expression . INF expression
    (25) expression -> expression . SUP expression
